--- a/src/components/ModalChangeTeam/styles.module.css
+++ b/src/components/ModalChangeTeam/styles.module.css
@@ -8,3 +8,16 @@
     background: rgba(58, 58, 58, 0.9);
     z-index: 99;
 }
+
+
+.modal {
+    width: 600px;
+    height: 300px;
+    background: #fff;
+    position: relative;
+    border-radius: 15px;
+    box-shadow: -1px 1px 2px #686868 ;
+    top: 30px;
+    margin: 0 auto;
+    padding: 15px 10px;
+}
