--- a/src/pages/Schedule/styles.module.css
+++ b/src/pages/Schedule/styles.module.css
@@ -179,11 +179,14 @@
 
 
 .scheduleBody div.scheduleBorders {
-    height: 170px;
+    min-height: 170px;
     padding: 2px;
     border-right: 1px solid #bdbfc1;
     align-items: stretch;
     width: 14.2857%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .scheduleBody div:last-child {
@@ -232,7 +235,7 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    height: 145px;
+    min-height: 145px;
 }
 
 
