--- a/src/components/Alerta/styles.css
+++ b/src/components/Alerta/styles.css
@@ -5,18 +5,20 @@
     top: 0;
     left: 0;
     background: rgba(58, 58, 58, 0.9);
+    z-index: 999;
 }
 
 .modal-alerta {
     position: relative;
     width: 550px;
-    height: 230px;
+    height: 200px;
     border-radius: 30px;
     box-shadow: -1px 1px 2px #686868 ;
     background: white;
     top: 50%;
     margin: 0 auto;
     transform: translateY(-50%);
+    z-index: 99999;
 }
 
 .modal-fechar {
@@ -46,10 +48,17 @@
     margin: 0 15px;
 }
 
+.modal-warning  img {
+    width: 45px;
+    height: 45px;
+    margin: 0 15px;
+    display: inline;
+}
+
 .modal-sucesso {
     color: rgb(27, 218, 27);
     padding-top: 25px;
-    width: 100%;
+    width: 40%;
     display: flex;
 }
 
@@ -60,3 +69,13 @@
     width: 100%;
     display: flex;
 } 
+
+
+.modal-warning {
+    color: #cc0;
+    padding-top: 25px;
+    width: 100%;
+    display: flex;
+    filter: hue-rotate(45deg);
+}
+   
