--- a/src/components/ModalAddSchedule/styles.module.css
+++ b/src/components/ModalAddSchedule/styles.module.css
@@ -13,12 +13,15 @@
     position: relative;
     width: 980px;
     height: auto;
-    border-radius: 15px;
+    max-height: 91vh;
+    margin: 0 auto;
+    border-radius: 5px;
     box-shadow: -1px 1px 2px #686868 ;
     background: white;
     top: 30px;
     margin: 0 auto;
     padding: 15px 10px;
+    overflow: auto;
 }
 
 .modalFechar {
