adicionado hora fim no card

--- a/src/pages/Schedule/styles.module.css
+++ b/src/pages/Schedule/styles.module.css
@@ -233,7 +233,7 @@
 .scheduleDay {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: space-between;
     min-height: 145px;
 }
 
